--- a/templates/lists/list.html
+++ b/templates/lists/list.html
@@ -6,12 +6,12 @@
 </head>
 <body>
     <h1>Your To-Do list</h1>
-    <form method="post" action="{% url 'lists:new_list' %}">
+    <form method="post" action="{% url 'lists:add_item' list.id %}">
         {% csrf_token %}
         <input name="item_text" id="id_new_item" placeholder="Enter a to-do item">
     </form>
     <table id="id_list_table">
-        {% for item in items %}
+        {% for item in list.item_set.all %}
             <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
         {% endfor %}
     </table>
