--- a/templates/lists/home.html
+++ b/templates/lists/home.html
@@ -8,7 +8,9 @@
     <h1>Start a new To-Do list</h1>
     <form method="post" action="{% url 'lists:new_list' %}">
         {% csrf_token %}
-        <input name="item_text" id="id_new_item" placeholder="Enter a to-do item">
+        <p style="text-align: center;">
+            <input name="item_text" id="id_new_item" placeholder="Enter a to-do item">
+        </p>
     </form>
 </body>
 </html>
