--- a/templates/lists/home.html
+++ b/templates/lists/home.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>To-Do lists</title>
-</head>
-<body>
-    <h1>Start a new To-Do list</h1>
-    <form method="post" action="{% url 'lists:new_list' %}">
-        {% csrf_token %}
-        <p style="text-align: center;">
-            <input name="item_text" id="id_new_item" placeholder="Enter a to-do item">
-        </p>
-    </form>
-</body>
-</html>
+{% extends 'lists/base.html' %}
+
+{% block header_text %}Start a new To-Do list{% endblock %}
+
+{% block form_action %}{% url 'lists:new_list' %}{% endblock %}
