--- a/templates/lists/base.html
+++ b/templates/lists/base.html
@@ -15,6 +15,9 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">Superlists</a>
                 {% if user.email %}
+                    <ul class="nav navbar-nav navbar-left">
+                        <li><a href="{% url 'lists:my_lists' user.email %}">My lists</a></li>
+                    </ul>
                     <ul class="nav navbar-nav, navbar-right">
                         <li class="navbar-text">Logged in as {{ user.email }}</li>
                         <li><a href="{% url 'accounts:logout' %}">Log out</a></li>
@@ -46,6 +49,7 @@
             <div class="col-md-6 col-md-offset-3 jumbotron">
                 <div class="text-center">
                     <h1>{% block header_text %}{% endblock %}</h1>
+                    {% block list_form %}
                     <form method="post" action="{% block form_action %}{% endblock %}">
                         {{ form.text }}
                         {% csrf_token %}
@@ -55,12 +59,20 @@
                             </div>
                         {% endif %}
                     </form>
+                    {% endblock %}
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-md-offset-3 col-md-6">
                 {% block table %}
+                {% endblock %}
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                {% block extra_content %}
                 {% endblock %}
             </div>
         </div>
